# Web-API

./: .coveralls.yml  .editorconfig  .env.example  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  package.json  pyproject.toml  requirements.txt
app/: __init__.py
app/http/controllers/api/: PredictionController.py
config/: application.py
tests/: conftest.py  test_app.py
utils/: __init__.py  bbox.py  image.py  multi_gpu_model.py  utils.py
