[tool.poetry]
name = "web-api"
version = "0.1.0"
description = "REST API for serve machine learning models"
authors = ["Alvaro Farias <afariasfermin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
Flask-Cors = "^3.0.8"
Flask-RESTful = "^0.3.8"
python-dotenv = "^0.12.0"
scikit-image = "^0.16.2"
numpy = "^1.18.2"
tensorflow = "^2.1.0"
opencv-python = "^4.2.0"
scipy = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-flask = "^1.0.0"
black = "^19.10b0"
mypy = "^0.770"
safety = "^1.8.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
